--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "template",
+  "name": "pokemon",
   "version": "1.0.3",
   "scripts": {
-    "dev": "DB=dev-db LEVEL=silly PORT=3333 nodemon dst/server.js"
+    "start": "LEVEL=silly node dst/server.js",
+    "dev": "DB=dev-pokemon LEVEL=silly PORT=3333 nodemon dst/server.js"
   },
-  "author": "Chyld Medford",
+  "author": "Joe Henry",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.11.4",
