--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
     "joi": "^9.0.1",
+    "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.5",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
